Fix whitespace above header bug (remove paragraphs) and tweak header colour.

--- a/stylesheets/bundle_common.css
+++ b/stylesheets/bundle_common.css
@@ -167,7 +167,8 @@ html {
 
 a {
 	//color: #4183c4;
-	color: #EE1133;
+	//color: #EE1133;
+	color: #C00;
 	text-decoration: none;
 }
 
